--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         <div class="social-icons">
             <p>
                 <a href="https://spotify-github-profile.kittinanx.com/api/view?uid=gurra_optimus&redirect=true">
-                    <img title="spotify-github-profile" alt="spotify" src="https://spotify-github-profile.kittinanx.com/api/view.svg?uid=gurra_optimus&cover_image=true&theme=default&show_offline=true&background_color=00000&interchange=false&bar_color=9e10ea&bar_color_cover=True"/>
+                    <img title="spotify-github-profile" alt="spotify" src="https://spotify-github-profile.kittinanx.com/api/view?uid=raniboyna&cover_image=true&theme=default&show_offline=false&background_color=121212&interchange=false&bar_color_cover=true"/>
                 </a>
             </p>
             <p>
