--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             padding: 0;
             font-family: Arial, sans-serif;
             background-color: #f4f4f4; /* fallback background color */
-            background-image: url('https://gurraoptimus.se/img/github.jp'); /* Background image */
+            background-image: url('https://gurraoptimus.se/img/github.jpg'); /* Background image */
             background-size: cover; /* Ensures the image covers the entire background */
             background-position: center; /* Centers the background image */
             display: flex;
