--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
         }
 
         /* Mobile responsiveness */
-        @media (max-width: 768px) {
+        @media (max-width: 431px) {
             .social-icons {
-                margin: 15px;
+                margin: 13px;
             }
 
             .social-icons img {
@@ -94,12 +94,12 @@
         }
 
         footer {
-            font-size: 12px;
-            padding: 15px;
+            font-size: 11px;
+            padding: 13px;
         }
 
         footer p {
-            margin: 5px 0;
+            margin: 4px 0;
         }
 
         footer .footer-logo img {
@@ -123,7 +123,7 @@
 
         /* Additional styling for social icons and footer layout */
         .social-icons a {
-            margin: 5px;
+            margin: 4px;
         }
 
     </style>
@@ -131,7 +131,7 @@
 
 <body>
     <header>
-        <h1>{ Gurraoptimus Development }</h1>
+        <h1>{ GURRA OPTIMUS DEVELOPMENT }</h1>
     </header>
 
     <!-- Main content -->
