--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <head>
     <meta property="og:title" content="{ Gurraoptimus Development }">
     <meta property="og:description" content="Official site for { Gurraoptimus Development }. Check out our latest projects and social media links!">
-    <meta property="og:image" content="https://gurraoptimus.se/icon/favicon.ico">
+    <meta property="og:image" content="https://www.gurraoptimus.se/img/github.jpg" />
 
     <meta charset="UTF-8">
-
-    <title>{ Gurraoptimus Development }</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>{Gurraoptimus Development}</title>
     <link rel="shortcut icon" href="https://gurraoptimus.se/icon/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="https://gurraoptimus.se/css/stylesheet.css">
     <style>
@@ -131,7 +131,7 @@
 
 <body>
     <header>
-        <h1>{ GURRA OPTIMUS DEVELOPMENT }</h1>
+        <h1>{ GURRAOPTIMUS DEVELOPMENT }</h1>
     </header>
 
     <!-- Main content -->
