--- a/index.html
+++ b/index.html
@@ -73,29 +73,29 @@
 
         /* Section for the main content */
         .content {
-            max-width: 960px;
+            max-width: 230px;
             margin: 0 auto;
-            padding: 20px;
+            padding: 10px;
         }
 
         /* Mobile responsiveness */
-        @media (max-width: 231px) {
+        @media (max-width: 131px) {
             .social-icons {
-                margin: 13px;
+                margin: 10px;
             }
 
             .social-icons img {
-                max-width: 80%;
+                max-width: 30%;
             }
 
             header h1 {
-                font-size: 2.9em;
+                font-size: 0.1em;
             }
         }
 
         footer {
-            font-size: 11px;
-            padding: 13px;
+            font-size: 10px;
+            padding: 9px;
         }
 
         footer p {
@@ -106,14 +106,14 @@
             max-width: 100px;
         }
 
-        @media (max-width: 480px) {
+        @media (max-width: 320px) {
             header h1 {
                 font-size: 1.5em;
             }
 
             .badge-links img {
-                max-width: 70px;
-                margin: 8px;
+                max-width: 240px;
+                margin: 2px;
             }
 
             footer .footer-logo img {
@@ -138,7 +138,7 @@
     <section class="content">
         <div class="social-icons">
             <p>
-                <a href="https://spotify-github-profile.kittinanx.com/api/view?uid=gurra_optimus&redirect=true">
+                <a href="https://spotify-github-profile.kittinanx.com/api/view?uid=raniboyna&redirect=false">
                     <img title="spotify-github-profile" alt="spotify" src="https://spotify-github-profile.kittinanx.com/api/view?uid=raniboyna&cover_image=true&theme=default&show_offline=true&background_color=121212&interchange=false&bar_color_cover=true"/>
                 </a>
             </p>
