--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         <div class="social-icons">
             <p>
                 <a href="https://spotify-github-profile.kittinanx.com/api/view?uid=raniboyna&redirect=false">
-                    <img title="spotify-github-profile" alt="spotify" src="https://spotify-github-profile.kittinanx.com/api/view?uid=raniboyna&cover_image=true&theme=default&show_offline=true&background_color=121212&interchange=false&bar_color_cover=true"/>
+                    <img title="spotify-github-profile" alt="spotify" src="https://spotify-github-profile.kittinanx.com/api/view?uid=&cover_image=true&theme=default&show_offline=true&background_color=121212&interchange=false&bar_color_cover=true"/>
                 </a>
             </p>
         </div>
